Add initial functionalities

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "gulp-shell": "^0.2.9",
     "jshint-stylish": "^1.0.0",
     "run-sequence": "^1.0.0"
+  },
+  "dependencies": {
+    "lodash.debounce": "^4.0.8"
   }
 }
