Remove debounce on resize

--- a/package.json
+++ b/package.json
@@ -30,7 +30,5 @@
     "jshint-stylish": "^1.0.0",
     "run-sequence": "^1.0.0"
   },
-  "dependencies": {
-    "lodash.debounce": "^4.0.8"
-  }
+  "dependencies": {}
 }
