--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A Cytoscape extension to enable drawing over and under a graph",
   "main": "./dist/cytoscape-canvas.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src --presets babel-preset-es2015 --out-dir dist",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./src --fix; exit 0"
   },
   "repository": {
     "type": "git",
@@ -14,6 +16,8 @@
     "cytoscape",
     "cytoscape.js",
     "cytoscapejs",
+    "cytoscape-canvas",
+    "canvas",
     "extension"
   ],
   "license": "MIT",
@@ -22,6 +26,10 @@
   },
   "homepage": "https://github.com/classcraft/cytoscape-canvas",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-classcraft": "^1.0.2",
     "gulp": "^3.8.8",
     "gulp-jshint": "^1.8.5",
     "gulp-prompt": "^0.1.1",
