--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/classcraft/cytoscape-canvas.git"
+    "url": "https://github.com/classcraft/cytoscape.js-canvas.git"
   },
   "keywords": [
     "cytoscape",
@@ -22,9 +22,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/classcraft/cytoscape-canvas/issues"
+    "url": "https://github.com/classcraft/cytoscape.js-canvas/issues"
   },
-  "homepage": "https://github.com/classcraft/cytoscape-canvas",
+  "homepage": "https://github.com/classcraft/cytoscape.js-canvas",
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
