--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "eslint": "^3.19.0",
-    "eslint-config-classcraft": "^1.0.2",
+    "eslint": "4.19.1",
+    "eslint-config-classcraft": "3.2.1",
+    "eslint-plugin-classcraft": "github:classcraft/classcraft-eslint-plugin.git#1.0.6",
     "gulp": "^3.8.8",
     "gulp-jshint": "^1.8.5",
     "gulp-prompt": "^0.1.1",
     "gulp-replace": "^0.4.0",
     "gulp-shell": "^0.2.9",
     "jshint-stylish": "^1.0.0",
+    "prettier": "^1.14.3",
     "run-sequence": "^1.0.0"
   },
   "dependencies": {}
